--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "build": "parcel build public/index.html"
   },
   "dependencies": {
-    "components": "0.1.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-router-dom": "5.1.2"
   },
   "devDependencies": {
-    "@types/prettier": "1.18.2",
+    "@types/prettier": "1.18.3",
     "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.3",
+    "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "5.1.2",
     "@types/sass": "1.16.0",
     "husky": "3.0.9",
     "parcel": "1.12.4",
-    "prettier": "1.18.2",
-    "pretty-quick": "2.0.0",
+    "postcss-preset-env": "6.7.0",
+    "prettier": "1.19.1",
+    "pretty-quick": "2.0.1",
     "sass": "1.23.3"
   },
   "alias": {
